--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,8 +1,8 @@
 // Общие стили текста
-// @import "./base/text";
+@import "./base/text";
 
 // Кнопки
-@import "./base/buttons";
+// @import "./base/buttons";
 
 // Поля выбора
 // @import "./base/select";
@@ -16,4 +16,4 @@
 // Аккордеоны (Спойлеры)
 // @import "./base/accordion";
 
-@import "./components/timer";
+// @import "./components/timer";
