--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -1,2 +1,5 @@
+@import "./components/logo";
 @import "./components/controls/input";
 @import "./components/poppa";
+@import "./components/bayan";
+@import "./components/socials";
