--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,8 +6,15 @@
 @import "./components";
 
 // Шрифты
-// @include font('Gilroy', normal, 400, '../resources/fonts/Gilroy/Gilroy-Regular.woff2');
-// @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300..900&display=swap');
+@include font("Inter", normal, 400, "../resources/fonts/Inter-Regular");
+@include font("Inter", normal, 600, "../resources/fonts/Inter-SemiBold");
+@include font("Inter", normal, 900, "../resources/fonts/Inter-Black");
+@include font(
+  "Progress",
+  italic,
+  700,
+  "../resources/fonts/progress-bold-italic"
+);
 
 // Сброс CSS
 @import "./reset";
@@ -16,13 +23,14 @@ body {
   font-family: $ff-main;
   font-size: 14px;
   font-weight: 400;
-  line-height: 1.2;
+  line-height: 1.25;
   color: $text-primary;
+  background: #000;
+}
 
-  ._lock & {
-    overflow: hidden;
-    touch-action: none;
-  }
+body._lock {
+  overflow: hidden;
+  touch-action: none;
 }
 
 .wrapper {
@@ -45,27 +53,34 @@ body {
 всем классам содержащим *__container
 Например header__container, main__container и т.д.
 */
-[class*="__container"] {
-  @if ($max-width-container > 0) {
-    box-sizing: content-box;
-    max-width: $max-width-container;
-    margin: 0 auto;
-  }
-  @if ($container-padding > 0) {
-    padding: 0 var(--container-padding);
-  }
+// [class*="__container"] {
+//   @if ($max-width-container > 0) {
+//     box-sizing: content-box;
+//     max-width: $max-width-container;
+//     margin: 0 auto;
+//   }
+//   @if ($container-padding > 0) {
+//     padding: 0 var(--container-padding);
+//   }
 
-  @media (max-width: $tablet) {
-    --container-padding: 30px;
-  }
+//   @media (max-width: $tablet) {
+//     --container-padding: 30px;
+//   }
 
-  @media (max-width: $mobile-l) {
-    --container-padding: 20px;
-  }
+//   @media (max-width: $mobile-l) {
+//     --container-padding: 20px;
+//   }
 
-  @media (max-width: $mobile-m) {
-    --container-padding: 16px;
-  }
+//   @media (max-width: $mobile-m) {
+//     --container-padding: 16px;
+//   }
+// }
+.container {
+  max-width: 1600px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 // Библиотеки
@@ -91,6 +106,11 @@ body {
 // Секции
 @import "./sections/header";
 @import "./sections/main";
+@import "./sections/hero";
+@import "./sections/fund";
+@import "./sections/about";
+@import "./sections/teams";
+@import "./sections/faq";
 @import "./sections/footer";
 
 // Стили для отдельных страниц
