--- a/src/scss/components/socials.scss
+++ b/src/scss/components/socials.scss
@@ -14,6 +14,7 @@
   max-height: var(--size);
   margin-right: 12px;
   fill: var(--icon-color);
+  transition: all 0.3s;
   @media (max-width: 575px) {
     --size: 32px;
     margin-right: 9px;
