--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -1,18 +1,23 @@
 .header {
   position: fixed;
+  top: 80px;
   right: 0;
   left: 0;
+  z-index: 100;
   max-width: 1995px;
   padding-top: 35px;
   padding-bottom: 35px;
   margin-right: auto;
   margin-left: auto;
+  clip-path: polygon(0 2%, 100% 8%, 98% 88%, 3% 100%);
   background-color: #000000;
 }
 .header__container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
+  max-width: 100%;
+  padding-right: 130px;
 }
 
 .header__logo {
@@ -28,12 +33,16 @@
 
 .header__nav-item {
   --fz: 25px;
-  margin-right: 84px;
+  margin-right: 58px;
 }
 .header__nav-item:last-child {
   margin-right: 0;
 }
 .header__nav-link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 0 27px;
   font-size: var(--fz);
   color: #fff;
 }
