--- a/src/scss/sections/hero.scss
+++ b/src/scss/sections/hero.scss
@@ -12,6 +12,8 @@
   align-items: flex-start;
   justify-content: space-between;
   max-width: 2150px;
+  padding-right: 0;
+  padding-left: 0;
   margin-left: 0;
 }
 
@@ -37,6 +39,7 @@
   margin-right: 0;
   margin-bottom: -100px;
   margin-left: auto;
+  clip-path: polygon(0 2%, 100% 8%, 98% 88%, 3% 100%);
   font-size: 35px;
   font-weight: 700;
   line-height: 40px;
@@ -44,7 +47,14 @@
   text-align: center;
   text-transform: uppercase;
   background-color: #000;
+  transition: all 0.3s;
   transform: translate(-26px, -197px);
+}
+.hero__button:hover {
+  @media (any-hover: hover) {
+    color: #000;
+    background-color: #fff;
+  }
 }
 
 .hero-offer {
