--- a/src/scss/sections/teams.scss
+++ b/src/scss/sections/teams.scss
@@ -10,15 +10,26 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  @media (max-width: 1920px) {
+    padding-top: 194px;
+    padding-bottom: 79px;
+  }
 }
 
 .teams__title {
   max-width: 800px;
   margin-bottom: 80px;
+  @media (max-width: 1920px) {
+    max-width: 490px;
+    margin-bottom: 40px;
+  }
 }
 
 .teams__title::after {
   top: -80px;
+  @media (max-width: 1920px) {
+    top: -40px;
+  }
 }
 
 .teams__gallery {
@@ -26,6 +37,11 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  @media (max-width: 1920px) {
+    max-width: 1000px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 .teams-card {
   display: flex;
@@ -34,4 +50,9 @@
   max-width: 262px;
   margin-right: 18px;
   margin-left: 18px;
+  @media (max-width: 1920px) {
+    max-width: 162px;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
 }
