--- a/src/scss/sections/about.scss
+++ b/src/scss/sections/about.scss
@@ -9,6 +9,10 @@
     rgba(125, 11, 0, 0.5) 18.2%,
     #c81200 76.03%
   );
+  @media (max-width: 1920px) {
+    padding-top: 110px;
+    padding-bottom: 134px;
+  }
 }
 .about::before {
   position: absolute;
@@ -28,10 +32,16 @@
 }
 .about__container {
   max-width: 1800px;
+  @media (max-width: 1920px) {
+    max-width: 1050px;
+  }
 }
 
 .about__title {
   margin-bottom: 30px;
+  @media (max-width: 1920px) {
+    margin-bottom: 10px;
+  }
 }
 .about__title::before,
 .about__title::after {
@@ -42,6 +52,9 @@
   position: relative;
   z-index: 1;
   padding-bottom: 86px;
+  @media (max-width: 1920px) {
+    padding-bottom: 36px;
+  }
 }
 .about-card::before {
   position: absolute;
@@ -60,6 +73,10 @@
   margin-right: auto;
   margin-bottom: -30px;
   margin-left: auto;
+  @media (max-width: 1920px) {
+    max-width: 628px;
+    margin-bottom: -20px;
+  }
 }
 
 .about-card__img {
@@ -73,6 +90,10 @@
   font-weight: 900;
   color: #ffffff;
   text-align: center;
+  @media (max-width: 1920px) {
+    margin-bottom: 15px;
+    font-size: 50px;
+  }
 }
 
 .about-card__button {
@@ -97,6 +118,12 @@
   background-position: center;
   background-size: contain;
   transition: all 0.3s;
+  @media (max-width: 1920px) {
+    max-width: 415px;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    font-size: 20px;
+  }
 }
 
 .about-card__button:hover {
