--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -11,6 +11,12 @@
   margin-left: auto;
   clip-path: polygon(0 2%, 100% 8%, 98% 88%, 3% 100%);
   background-color: #000000;
+  @media (max-width: 1600px) {
+    top: 40px;
+    max-width: 1125px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
 }
 .header__container {
   display: flex;
@@ -18,11 +24,18 @@
   justify-content: flex-end;
   max-width: 100%;
   padding-right: 130px;
+  @media (max-width: 1600px) {
+    padding-right: 70px;
+  }
 }
 
 .header__logo {
   max-width: 295px;
   margin-right: 110px;
+  @media (max-width: 1600px) {
+    max-width: 165px;
+    margin-right: 61px;
+  }
 }
 
 .header__nav-links {
@@ -34,6 +47,10 @@
 .header__nav-item {
   --fz: 25px;
   margin-right: 58px;
+  @media (max-width: 1600px) {
+    margin-right: 28px;
+    --fz: 14px;
+  }
 }
 .header__nav-item:last-child {
   margin-right: 0;
@@ -45,4 +62,7 @@
   padding: 0 27px;
   font-size: var(--fz);
   color: #fff;
+  @media (max-width: 1600px) {
+    padding: 0 17px;
+  }
 }
