--- a/src/scss/sections/faq.scss
+++ b/src/scss/sections/faq.scss
@@ -8,6 +8,10 @@
     padding-top: 144px;
     padding-bottom: 199px;
   }
+  @media (max-width: 992px) {
+    padding-top: 164px;
+    padding-bottom: 106px;
+  }
 }
 .faq::after {
   position: absolute;
@@ -29,6 +33,12 @@
     height: 370px;
     background-size: 160px;
   }
+  @media (max-width: 992px) {
+    bottom: -130px;
+    width: 100%;
+    height: 220px;
+    background-size: 90px;
+  }
 }
 .faq__container {
   max-width: 1510px;
@@ -38,6 +48,9 @@
   margin-bottom: 95px;
   @media (max-width: 1920px) {
     margin-bottom: 55px;
+  }
+  @media (max-width: 992px) {
+    margin-bottom: 25px;
   }
 }
 .faq__title::before,
@@ -51,6 +64,9 @@
   @media (max-width: 1920px) {
     max-width: 840px;
   }
+  @media (max-width: 992px) {
+    max-width: 450px;
+  }
 }
 .faq-card {
   margin-bottom: 28px;
@@ -60,6 +76,10 @@
   @media (max-width: 1920px) {
     --padding-horizontal: 60px;
     margin-bottom: 18px;
+  }
+  @media (max-width: 992px) {
+    --padding-horizontal: 30px;
+    margin-bottom: 11px;
   }
 }
 .faq-card:last-of-type {
@@ -72,6 +92,10 @@
   @media (max-width: 1920px) {
     padding-top: 3px;
     padding-bottom: 3px;
+  }
+  @media (max-width: 922px) {
+    padding-top: 1px;
+    padding-bottom: 1px;
   }
 }
 .faq-card__top::before,
@@ -91,8 +115,11 @@
     width: 16px;
     height: 6px;
   }
-}
-.faq-card__top::before {
+  @media (max-width: 992px) {
+    right: 35px;
+    width: 8px;
+    height: 2px;
+  }
 }
 .faq-card__top::after {
   transform: translateY(-50%) rotate(90deg);
@@ -103,6 +130,9 @@
   color: #000000;
   @media (max-width: 1920px) {
     font-size: 26px;
+  }
+  @media (max-width: 992px) {
+    font-size: 15px;
   }
 }
 .faq-card__bottom {
