--- a/src/scss/base/text.scss
+++ b/src/scss/base/text.scss
@@ -18,6 +18,9 @@
     max-width: 380px;
     font-size: 28px;
   }
+  @media (max-width: 576px) {
+    max-width: 320px;
+  }
 }
 .section-title::before,
 .section-title::after {
@@ -49,6 +52,9 @@
   @media (max-width: 992px) {
     bottom: -10px;
   }
+  @media (max-width: 576px) {
+    left: 0;
+  }
 }
 .section-title::after {
   top: -40px;
@@ -61,5 +67,8 @@
   @media (max-width: 992px) {
     top: -10px;
     right: 40px;
+  }
+  @media (max-width: 576px) {
+    right: 0;
   }
 }
