--- a/src/scss/sections/faq.scss
+++ b/src/scss/sections/faq.scss
@@ -12,6 +12,9 @@
     padding-top: 164px;
     padding-bottom: 106px;
   }
+  @media (max-width: 576px) {
+    padding-bottom: 67px;
+  }
 }
 .faq::after {
   position: absolute;
@@ -42,6 +45,10 @@
 }
 .faq__container {
   max-width: 1510px;
+  @media (max-width: 576px) {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
 }
 
 .faq__title {
@@ -51,6 +58,9 @@
   }
   @media (max-width: 992px) {
     margin-bottom: 25px;
+  }
+  @media (max-width: 576px) {
+    margin-bottom: 18px;
   }
 }
 .faq__title::before,
@@ -80,6 +90,9 @@
   @media (max-width: 992px) {
     --padding-horizontal: 30px;
     margin-bottom: 11px;
+  }
+  @media (max-width: 576px) {
+    --padding-horizontal: 11px;
   }
 }
 .faq-card:last-of-type {
@@ -120,6 +133,9 @@
     width: 8px;
     height: 2px;
   }
+  @media (max-width: 576px) {
+    right: 8px;
+  }
 }
 .faq-card__top::after {
   transform: translateY(-50%) rotate(90deg);
@@ -134,6 +150,9 @@
   @media (max-width: 992px) {
     font-size: 15px;
   }
+  @media (max-width: 576px) {
+    max-width: 90%;
+  }
 }
 .faq-card__bottom {
   padding: 7px var(--padding-horizontal);
@@ -146,6 +165,9 @@
   color: #000000;
   @media (max-width: 1920px) {
     font-size: 27px;
+  }
+  @media (max-width: 992px) {
+    font-size: 14px;
   }
 }
 
@@ -160,8 +182,11 @@
   @media (max-width: 1920px) {
     font-size: 17px;
   }
+  @media (max-width: 992px) {
+    font-size: 13px;
+  }
 }
-.faq-card__bottom li::before {
+.faq-card__bottom ul li::before {
   position: absolute;
   left: -15px;
   content: "●";
