--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -22,6 +22,12 @@
     padding-top: 15px;
     padding-bottom: 15px;
   }
+  @media (max-width: 576px) {
+    top: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    clip-path: none;
+  }
 }
 .header__container {
   display: flex;
@@ -34,6 +40,10 @@
   }
   @media (max-width: 992px) {
     padding-right: 55px;
+  }
+  @media (max-width: 576px) {
+    padding-right: 20px;
+    padding-left: 20px;
   }
 }
 
@@ -48,12 +58,46 @@
     max-width: 102px;
     margin-right: 31px;
   }
+  @media (max-width: 576px) {
+    position: relative;
+    z-index: 2;
+    margin-right: auto;
+    margin-bottom: -45px;
+  }
 }
 
+.header__nav {
+  @media (max-width: 576px) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    transition: all 0.3s ease;
+    transform: translateY(-120%);
+  }
+}
+.header--opened .header__nav {
+  @media (max-width: 576px) {
+    pointer-events: initial;
+    background: rgba(0, 0, 0, 0.9);
+    transform: translateY(0);
+  }
+}
 .header__nav-links {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  @media (max-width: 576px) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .header__nav-item {
@@ -67,9 +111,17 @@
     --fz: 12px;
     margin-right: 10px;
   }
+  @media (max-width: 576px) {
+    height: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
 }
 .header__nav-item:last-child {
   margin-right: 0;
+  @media (max-width: 576px) {
+    margin-bottom: 0;
+  }
 }
 .header__nav-link {
   display: block;
@@ -83,5 +135,13 @@
   }
   @media (max-width: 992px) {
     padding: 0 8px;
+  }
+}
+
+.header__burger {
+  position: relative;
+  z-index: 2;
+  @media (min-width: 577px) {
+    display: none;
   }
 }
