--- a/src/scss/sections/fund.scss
+++ b/src/scss/sections/fund.scss
@@ -105,6 +105,7 @@
   width: 100%;
   max-width: 887px;
   height: 100%;
+  aspect-ratio: 1;
   margin-right: auto;
   margin-left: auto;
   transform: translateX(50px);
@@ -250,8 +251,15 @@
     fill: #000;
   }
 }
+.stream-channel--active.stream-channel--twitch .stream-channel__icon {
+  fill: #5c16c5;
+}
+.stream-channel--active.stream-channel--vk .stream-channel__icon {
+  fill: #0077ff;
+}
 
 .stream__video {
+  display: none;
   max-width: 1620px;
   height: 833px;
   margin-right: auto;
@@ -270,8 +278,13 @@
     margin-left: -15px;
   }
 }
+
+.stream__video--active {
+  display: block;
+}
 .stream__video iframe {
   display: block;
   width: 100%;
   height: 100%;
+  background-color: #333;
 }
