--- a/src/scss/sections/hero.scss
+++ b/src/scss/sections/hero.scss
@@ -49,10 +49,101 @@
     transform: translateX(-60px);
   }
 }
+.hero__figure::before {
+  position: absolute;
+  top: 280px;
+  left: 330px;
+  z-index: 2;
+  display: block;
+  width: 88px;
+  height: 109px;
+  content: "";
+  background-image: url("../img/hero/cracker-1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  @media (max-width: 1920px) {
+    top: 154px;
+    left: 185px;
+    width: 49px;
+    height: 62px;
+  }
+  @media (max-width: 992px) {
+    top: 97px;
+    left: 89px;
+    width: 38px;
+    height: 40px;
+  }
+}
 .hero__pic {
+  position: relative;
+  z-index: 3;
   display: block;
   width: 100%;
   height: 100%;
+}
+.hero__pic::before {
+  position: absolute;
+  top: 40%;
+  right: -150px;
+  z-index: 2;
+  display: block;
+  width: 118px;
+  height: 129px;
+  content: "";
+  background-image: url("../img/hero/cracker-2.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  @media (max-width: 1920px) {
+    right: -90px;
+    width: 77px;
+    height: 79px;
+  }
+  @media (max-width: 992px) {
+    top: 42%;
+    right: -50px;
+    width: 67px;
+    height: 47px;
+  }
+  @media (max-width: 576px) {
+    top: 34%;
+    right: -40px;
+    width: 67px;
+    height: 37px;
+  }
+}
+.hero__pic::after {
+  position: absolute;
+  right: -190px;
+  bottom: 24%;
+  z-index: 2;
+  display: block;
+  width: 158px;
+  height: 169px;
+  content: "";
+  background-image: url("../img/hero/cracker-3.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  @media (max-width: 1920px) {
+    right: -110px;
+    bottom: 23%;
+    width: 99px;
+    height: 102px;
+  }
+  @media (max-width: 992px) {
+    right: -77px;
+    bottom: 21%;
+    width: 99px;
+    height: 62px;
+  }
+  @media (max-width: 576px) {
+    right: -44px;
+    bottom: 13%;
+    width: 49px;
+    height: 52px;
+  }
 }
 .hero__img {
   width: 100%;
